# braid_tauri

./: .dockerignore  .gitignore  .taurignore  Cargo.toml  DIAMOND_TYPES_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  README.md  build_portable.bat  curl_wrapper.bat  docker-compose.yml  full_test.bat  ide.bat  patch.json  remove_globe.py  run.bat  run_docs.bat  test_braid_sync.bat
.gemini/: 309_reborn_handling.md  diamond_type_removal.md
braid_data/blobs/: meta.sqlite
braid_data/local.org/: page1.md
braid_data/peers/: test.md
crates/braid-blob/: Cargo.toml
crates/braid-blob/src/: lib.rs  store.rs
crates/braid-common/: Cargo.toml
crates/braid-common/src/: lib.rs
crates/braid-core/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/braid-core/src/: lib.rs
crates/braid-core/src/antimatter/: antimatter.rs  crdt_trait.rs  json_crdt.rs  messages.rs  mod.rs  sequence_crdt.rs  state.rs  tests.rs  utils.rs
crates/braid-core/src/antimatter/algorithm/: bubble.rs  mod.rs  prune.rs
crates/braid-core/src/core/: error.rs  mod.rs  traits.rs
crates/braid-core/src/core/merge/: antimatter_merge.rs  diamond.rs  merge_type.rs  mod.rs  simpleton.rs
crates/braid-core/src/core/server/: config.rs  conflict_resolver.rs  middleware.rs  mod.rs  multiplex.rs  parse_update.rs  resource_state.rs  send_update.rs  subscription.rs  utils.rs
crates/braid-core/src/fs/: api.rs  binary_sync.rs  blob_handlers.rs  config.rs  debouncer.rs  diff.rs  local_server.rs  mapping.rs  mod.rs  mount.rs  nfs.rs  rate_limiter.rs  scanner.rs  server_handlers.rs  state.rs  subscription.rs  sync.rs  versions.rs  watcher.rs
crates/braid-core/tests/: sync_integrity_tests.rs
crates/braid-http/: Cargo.toml
crates/braid-http/src/: error.rs  lib.rs  traits.rs
crates/braid-http/src/client/: config.rs  fetch.rs  fuzzer.rs  headers.rs  mod.rs  multiplex.rs  native_network.rs  parser.rs  retry.rs  subscription.rs  utils.rs  wasm_network.rs
crates/braid-http/src/protocol/: constants.rs  formatter.rs  headers.rs  mod.rs  multiplex.rs  parser.rs
crates/braid-http/src/types/: content_range.rs  mod.rs  patch.rs  request.rs  response.rs  update.rs  version.rs
crates/braid-loader/: Cargo.toml
crates/braid-text/: Cargo.toml  error.txt
crates/braid-text/src/: lib.rs
crates/braidfs-daemon/: Cargo.toml
crates/braidfs-daemon/src/: main.rs
crates/braidfs-nfs/: Cargo.toml
crates/braidfs-nfs/src/: main.rs
crates/server/: Cargo.toml  README.md  check_output.txt  server_check.txt  server_check_utf8.txt
crates/server/braid_data/: users.sqlite
crates/server/braid_data/blobs/: meta.sqlite
crates/server/braid_data/braid.org/: test_wiki.md  test_wiki.md.braid-meta
crates/server/braid_data/braid.org/local.org/: sync_test.md  sync_test.md.braid-meta
crates/server/examples/: ai_context_test.rs
crates/server/src/: config.rs  lib.rs  main.rs
crates/server/src/ai/: mod.rs
crates/server/src/auth/: mod.rs
crates/server/src/chat/: crdt.rs  mod.rs
crates/server/src/chat/ai/: mod.rs
crates/server/src/chat/friends/: mod.rs
crates/server/src/chat/handlers/: braid_subscribe.rs  chat.rs  friends.rs  handler_config.rs  mod.rs  presence.rs  typing.rs
crates/server/src/chat/mail/: mod.rs
crates/server/src/core/: blobs.rs  config.rs  ctx.rs  error.rs  mod.rs  router.rs
crates/server/src/core/auth/: middleware.rs  mod.rs
crates/server/src/core/auth/handlers/: auth.rs  auth_me.rs  mod.rs
crates/server/src/core/daemon/: mod.rs
crates/server/src/core/models/: mod.rs
crates/server/src/core/pages/: handlers.rs  handlers_v2.rs  local_org.rs  manager.rs  mod.rs  versioned_storage.rs
crates/server/src/core/store/: json_store.rs
crates/server/src/crdt/: mod.rs
crates/server/src/daemon/: mod.rs
crates/server/src/friends/: mod.rs
crates/server/src/handlers/: auth.rs  braid_subscribe.rs  chat.rs  friends.rs  mod.rs  presence.rs  typing.rs
crates/server/src/mail/: mod.rs
crates/server/src/models/: mod.rs
crates/server/src/protocol/: mod.rs
crates/server/src/store/: json_store.rs  mod.rs
crates/server/src/wiki/: mod.rs
crates/server/tests/: chat_sync_integrity.rs
docker/: Dockerfile
local_link/: Cargo.toml  errors.txt  gen_icon.ps1  package-lock.json  tauri.conf.json  vite.config.js  xf_errors.txt
local_link/capabilities/: default.json
local_link/icons/: icon.icns
local_link/src/: config_store.rs  lib.rs  main.rs
local_link/src/backend/: db.rs  messaging.rs  mod.rs
local_link/src/commands/: mod.rs
local_link/src/local_sync/: mod.rs
local_link/src/sync/: mod.rs
local_link/ui/: debug_explorer.html  index.html  main.js
local_link/ui/lib/: quill.js  quill.min.js.map  quill.snow.css.map  simpleton-client.js
local_link_docs/: index.html  package-lock.json  package.json
local_link_docs/public/pages/: index.html
local_link_docs/src/: App.css  GettingStarted.jsx  Home.jsx  Pages.jsx  index.css  main.jsx
local_link_docs/src/components/: CodeSnippet.jsx  ThemeToggle.jsx
references/: .gitignore  Cargo.toml  build_output.txt  fix_vendor_imports.ps1
scripts/: full_test.bat  ide.bat  run.bat  test_broadcast.bat
scripts/braid_data/: users.sqlite
xf_tauri/: Cargo.toml  log.txt  package-lock.json  package.json  tauri.conf.json
xf_tauri/capabilities/: default.json
xf_tauri/data/: xfmail.db
xf_tauri/icons/: icon.icns
xf_tauri/src/: lib.rs  main.rs  models.rs  realtime.rs
xf_tauri/src/ai/: mod.rs
xf_tauri/src/auth/: mod.rs
xf_tauri/src/backend/: db.rs
xf_tauri/src/braid_mail/: mod.rs
xf_tauri/src/chat/: braid_client.rs  mod.rs
xf_tauri/src/commands/: mod.rs
xf_tauri/src/local_sync/: mod.rs
xf_tauri/tests/: full_flow_test.rs
xf_tauri/ui/: index.html  main.js
xf_tauri/ui/apps/ai/: ai.css  ai.js
xf_tauri/ui/apps/auth/: auth.css  auth.js
xf_tauri/ui/apps/chat/: ai_chat.js  chat.css  chat.js  chat_braid.js
xf_tauri/ui/apps/explorer/: editor.js  explorer.css  explorer.js
xf_tauri/ui/apps/feed/: feed.css  feed.js
xf_tauri/ui/apps/shared/: shared.css  utils.js
xf_tauri/ui/lib/: quill.js.map  quill.snow.css
(+63 files in other folders)
