[package]
name = "braid-blob"
version = "0.1.0"
edition = "2021"
description = "Braid-Blob storage and synchronization service."
license = "MIT OR Apache-2.0"

[dependencies]
# Internal
braid-http = { path = "../braid-http" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
bytes = { version = "1.0", features = ["serde"] }

# Crypto
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

# Tracing
tracing = "0.1"

[features]
default = ["native"]
native = []
