[package]
name = "braid-http"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
async-trait = "0.1"
async-channel = "2.3"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = { version = "1", features = ["serde"] }
tracing = "0.1"
url = "2"
percent-encoding = "2.3"
rand = "0.8"
futures = "0.3"
regex = "1"
once_cell = "1.18"
http = "1"
sfv = "0.14"
gloo-timers = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["native"]
native = []
wasm = ["dep:gloo-timers", "dep:wasm-bindgen-futures", "dep:js-sys"]
fuzzing = []
