[package]
name = "braid-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.33"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
