[package]
name = "braidfs-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
braid-core = { path = "../braid-core", features = [
    "fs",
    "server",
    "client",
    "blob",
    "serde",
    "smallvec",
] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
