[package]
name = "braidfs-nfs"
version = "0.1.0"
edition = "2021"

[dependencies]
braid-core = { path = "../braid-core", features = [
    "fs",
    "client",
    "server",
    "nfs",
] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-channel = "2.3"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
nfsserve = "0.10"
